2012-02-18 Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (platform_SCRIPTS): New variable.
	(platform_PROGRAMS): Likewise.
	* gentpl.py: Mark *,module and *.image for install.
	* grub-core/gdb_grub.in: Add a notice of expected environment.
	* grub-core/Makefile.core.def (gdb_grub): Mark for install.
	(gmodule.pl): Likewise.

2012-02-18 Vladimir Serbinenko  <phcoder@gmail.com>

	Replace grub_checkkey with grub_getkey_noblock.

	* grub-core/kern/term.c (grub_checkkey): Replaced with ...
	(grub_getkey_noblock): ... this. All users updated.

2012-02-18 Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/console.c: Move to ...
	* grub-core/term/emu/console.c: ...here.
	(grub_ncurses_getkey): Fix return value if no key is detected.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h (grub_unit_test_init): Add missing prototype.
	(grub_unit_test_fini): Likewise.
	* tests/lib/unit_test.c (main): Remove extra nested external prototype.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h (GRUB_UNIT_TEST)

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_break): Clarify logic.
	Better error handling.
	(grub_script_return): Likewise.
	* grub-core/script/lexer.c (grub_script_lexer_yywrap): Likewise.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h (__GNU_LIBRARY__): Avoid
	rimplicit redifinition.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Internationalisation): Detail (lack of) collation in
	GRUB.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (grub_cmdline_get): Don't gettext prompt.
	* grub-core/normal/main.c (grub_normal_read_line_real): Gettext
	prompt here.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (zfs_fetch_nvlist): Mark unknown member here